methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:18: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    if (isFacingTrail()){
                     ^SlugSnail:24: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
      if (isFacingTrail()){
                       ^